a5 (copy)/parse.output
Terminals unused in grammar

   SYNERROR


Grammar

    0 $accept: Start $end

    1 Start: Expr

    2 Expr: TURN OB Expr CB
    3     | SEW OB Expr COM Expr CB
    4     | HDROW OB Expr CB
    5     | TLROWS OB Expr CB
    6     | HDCOL OB Expr CB
    7     | TLCOLS OB Expr CB
    8     | A
    9     | B

   10 $@1: %empty

   11 Expr: LET $@1 Decls IN Expr END
   12     | ID OB Actuals CB
   13     | ID

   14 Decls: Decl
   15      | Decl Decls

   16 $@2: %empty

   17 Decl: FUN $@2 ID OB Formals CB ASSIGN Expr
   18     | VAL ID ASSIGN Expr

   19 Formals: ID
   20        | ID COM Formals

   21 Actuals: Expr
   22        | Expr COM Actuals


Terminals, with rules where they appear

$end (0) 0
error (256)
SYNERROR (258)
HDROW (259) 4
TLROWS (260) 5
HDCOL (261) 6
TLCOLS (262) 7
TURN (263) 2
SEW (264) 3
LET (265) 11
FUN (266) 17
VAL (267) 18
IN (268) 11
END (269) 11
ASSIGN (270) 17 18
ID (271) 12 13 17 18 19 20
A (272) 8
B (273) 9
OB (274) 2 3 4 5 6 7 12 17
CB (275) 2 3 4 5 6 7 12 17
COM (276) 3 20 22


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
Start (23)
    on left: 1, on right: 0
Expr (24)
    on left: 2 3 4 5 6 7 8 9 11 12 13, on right: 1 2 3 4 5 6 7 11 17
    18 21 22
$@1 (25)
    on left: 10, on right: 11
Decls (26)
    on left: 14 15, on right: 11 15
Decl (27)
    on left: 17 18, on right: 14 15
$@2 (28)
    on left: 16, on right: 17
Formals (29)
    on left: 19 20, on right: 17 20
Actuals (30)
    on left: 21 22, on right: 12 22


State 0

    0 $accept: . Start $end

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Start  go to state 11
    Expr   go to state 12


State 1

    4 Expr: HDROW . OB Expr CB

    OB  shift, and go to state 13


State 2

    5 Expr: TLROWS . OB Expr CB

    OB  shift, and go to state 14


State 3

    6 Expr: HDCOL . OB Expr CB

    OB  shift, and go to state 15


State 4

    7 Expr: TLCOLS . OB Expr CB

    OB  shift, and go to state 16


State 5

    2 Expr: TURN . OB Expr CB

    OB  shift, and go to state 17


State 6

    3 Expr: SEW . OB Expr COM Expr CB

    OB  shift, and go to state 18


State 7

   11 Expr: LET . $@1 Decls IN Expr END

    $default  reduce using rule 10 ($@1)

    $@1  go to state 19


State 8

   12 Expr: ID . OB Actuals CB
   13     | ID .

    OB  shift, and go to state 20

    $default  reduce using rule 13 (Expr)


State 9

    8 Expr: A .

    $default  reduce using rule 8 (Expr)


State 10

    9 Expr: B .

    $default  reduce using rule 9 (Expr)


State 11

    0 $accept: Start . $end

    $end  shift, and go to state 21


State 12

    1 Start: Expr .

    $default  reduce using rule 1 (Start)


State 13

    4 Expr: HDROW OB . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 22


State 14

    5 Expr: TLROWS OB . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 23


State 15

    6 Expr: HDCOL OB . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 24


State 16

    7 Expr: TLCOLS OB . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 25


State 17

    2 Expr: TURN OB . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 26


State 18

    3 Expr: SEW OB . Expr COM Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 27


State 19

   11 Expr: LET $@1 . Decls IN Expr END

    FUN  shift, and go to state 28
    VAL  shift, and go to state 29

    Decls  go to state 30
    Decl   go to state 31


State 20

   12 Expr: ID OB . Actuals CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr     go to state 32
    Actuals  go to state 33


State 21

    0 $accept: Start $end .

    $default  accept


State 22

    4 Expr: HDROW OB Expr . CB

    CB  shift, and go to state 34


State 23

    5 Expr: TLROWS OB Expr . CB

    CB  shift, and go to state 35


State 24

    6 Expr: HDCOL OB Expr . CB

    CB  shift, and go to state 36


State 25

    7 Expr: TLCOLS OB Expr . CB

    CB  shift, and go to state 37


State 26

    2 Expr: TURN OB Expr . CB

    CB  shift, and go to state 38


State 27

    3 Expr: SEW OB Expr . COM Expr CB

    COM  shift, and go to state 39


State 28

   17 Decl: FUN . $@2 ID OB Formals CB ASSIGN Expr

    $default  reduce using rule 16 ($@2)

    $@2  go to state 40


State 29

   18 Decl: VAL . ID ASSIGN Expr

    ID  shift, and go to state 41


State 30

   11 Expr: LET $@1 Decls . IN Expr END

    IN  shift, and go to state 42


State 31

   14 Decls: Decl .
   15      | Decl . Decls

    FUN  shift, and go to state 28
    VAL  shift, and go to state 29

    $default  reduce using rule 14 (Decls)

    Decls  go to state 43
    Decl   go to state 31


State 32

   21 Actuals: Expr .
   22        | Expr . COM Actuals

    COM  shift, and go to state 44

    $default  reduce using rule 21 (Actuals)


State 33

   12 Expr: ID OB Actuals . CB

    CB  shift, and go to state 45


State 34

    4 Expr: HDROW OB Expr CB .

    $default  reduce using rule 4 (Expr)


State 35

    5 Expr: TLROWS OB Expr CB .

    $default  reduce using rule 5 (Expr)


State 36

    6 Expr: HDCOL OB Expr CB .

    $default  reduce using rule 6 (Expr)


State 37

    7 Expr: TLCOLS OB Expr CB .

    $default  reduce using rule 7 (Expr)


State 38

    2 Expr: TURN OB Expr CB .

    $default  reduce using rule 2 (Expr)


State 39

    3 Expr: SEW OB Expr COM . Expr CB

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 46


State 40

   17 Decl: FUN $@2 . ID OB Formals CB ASSIGN Expr

    ID  shift, and go to state 47


State 41

   18 Decl: VAL ID . ASSIGN Expr

    ASSIGN  shift, and go to state 48


State 42

   11 Expr: LET $@1 Decls IN . Expr END

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 49


State 43

   15 Decls: Decl Decls .

    $default  reduce using rule 15 (Decls)


State 44

   22 Actuals: Expr COM . Actuals

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr     go to state 32
    Actuals  go to state 50


State 45

   12 Expr: ID OB Actuals CB .

    $default  reduce using rule 12 (Expr)


State 46

    3 Expr: SEW OB Expr COM Expr . CB

    CB  shift, and go to state 51


State 47

   17 Decl: FUN $@2 ID . OB Formals CB ASSIGN Expr

    OB  shift, and go to state 52


State 48

   18 Decl: VAL ID ASSIGN . Expr

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 53


State 49

   11 Expr: LET $@1 Decls IN Expr . END

    END  shift, and go to state 54


State 50

   22 Actuals: Expr COM Actuals .

    $default  reduce using rule 22 (Actuals)


State 51

    3 Expr: SEW OB Expr COM Expr CB .

    $default  reduce using rule 3 (Expr)


State 52

   17 Decl: FUN $@2 ID OB . Formals CB ASSIGN Expr

    ID  shift, and go to state 55

    Formals  go to state 56


State 53

   18 Decl: VAL ID ASSIGN Expr .

    $default  reduce using rule 18 (Decl)


State 54

   11 Expr: LET $@1 Decls IN Expr END .

    $default  reduce using rule 11 (Expr)


State 55

   19 Formals: ID .
   20        | ID . COM Formals

    COM  shift, and go to state 57

    $default  reduce using rule 19 (Formals)


State 56

   17 Decl: FUN $@2 ID OB Formals . CB ASSIGN Expr

    CB  shift, and go to state 58


State 57

   20 Formals: ID COM . Formals

    ID  shift, and go to state 55

    Formals  go to state 59


State 58

   17 Decl: FUN $@2 ID OB Formals CB . ASSIGN Expr

    ASSIGN  shift, and go to state 60


State 59

   20 Formals: ID COM Formals .

    $default  reduce using rule 20 (Formals)


State 60

   17 Decl: FUN $@2 ID OB Formals CB ASSIGN . Expr

    HDROW   shift, and go to state 1
    TLROWS  shift, and go to state 2
    HDCOL   shift, and go to state 3
    TLCOLS  shift, and go to state 4
    TURN    shift, and go to state 5
    SEW     shift, and go to state 6
    LET     shift, and go to state 7
    ID      shift, and go to state 8
    A       shift, and go to state 9
    B       shift, and go to state 10

    Expr  go to state 61


State 61

   17 Decl: FUN $@2 ID OB Formals CB ASSIGN Expr .

    $default  reduce using rule 17 (Decl)
